--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,4 @@
   <h1>VIJAY</h1>
 </center>
 <hr>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur iusto eaque cumque beatae error, vero sapiente consequatur maiores. Necessitatibus, quidem.</p>
